i want to die btw

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 services:
         - docker:stable-dind
 stages:
-        - build jar
+        #        - build jar
         - build and push docker image
         - deploy
 build:
