--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ deploy:
         before_script:
                 - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
                 - eval $(ssh-agent -s)
-                - echo "${SSH_PRIVATE_KEY}" | tr -d '\r' | ssh-add -
+                - echo "${DEV_SSH_PRIVATE_KEY}" | tr -d '\r' | ssh-add -
                 - mkdir -p ~/.ssh
                 - chmod 700 ~/.ssh
                 - echo -e "HOST *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
