added 1 more stage to build. Thinking of how to make it build moch faster. Should try getting rid of clean for maven

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,19 +1,19 @@
 services:
         - docker:stable-dind
 stages:
-        #        - build jar
+        - build jar
         - build and push docker image
         - deploy
-          #build:
-          # image: maven:3.6.3-openjdk-16 AS MAVEN_BUILD
-          # stage: build jar
-          # before_script:
-          #     - source .${CI_COMMIT_REF_NAME}.env
-          #script:
-          #     - mvn clean install -Dspring.profiles.active=#SPRING_ACTIVE_PROFILE && mvn package -B -e -Dsping.profiles.active=#SPRING_ACTIVE_PROFILE
-          # artifacts:
-          #    paths:
-          #             - target/*.jar
+build:
+        image: maven:3.6.3-openjdk-16 AS MAVEN_BUILD
+        stage: build jar
+        before_script:
+                - source .${CI_COMMIT_REF_NAME}.env
+        script:
+                - mvn clean install -Dspring.profiles.active=#SPRING_ACTIVE_PROFILE && mvn package -B -e -Dsping.profiles.active=#SPRING_ACTIVE_PROFILE
+        artifacts:
+                paths:
+                     - target/*.jar
 docker build:
         image: docker:stable
         stage: build and push docker image
@@ -35,4 +35,4 @@ deploy:
                 - echo -e "HOST *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
                 - source .${CI_COMMIT_REF_NAME}.env
         script: 
-                - ssh root@$SERVER_IP "docker login -u $DOCKER_USER -p $DOCKER_PASSWORD docker.io; docker stop $APP_NAME; docker system prune -a -f; docker pull $DOCKER_REPO; docker container run -d --name $APP_NAME -p $PORT:8080 -e SPRING_PROFILES_ACTIVE=$SPRING_ACTIVE_PROFILE $DOCKER_REPO; docker logout"
+                - ssh root@$SERVER_IP "docker login -u $DOCKER_USER -p $DOCKER_PASSWORD docker.io; docker stop $APP_NAME; docker system prune -a -f; docker pull $DOCKER_REPO; docker container run -d --name $APP_NAME -p $PORT:8080 -e SPRING_PROFILES_ACTIVE=$SPRING_ACTIVE_PROFILE $DOCKER_REPO"
