--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ pull:
                 - cd /home/ubuntu/bits4cash/backend4cash
         script:
                 - pwd
-                - git pull remote/master
+                - sudo git pull remote/master
 
 #docker build:
 #        image: docker:stable
