--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ pull:
                 - cd /home/ubuntu/bits4cash/backend4cash
         script:
                 - pwd
-                - git pull
+                - git pull git@gitlab.cs.ttu.ee:glkomi/backend4cash.git
 
 #docker build:
 #        image: docker:stable
