--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,7 +14,7 @@ spring:
       ddl-auto: create
   datasource:
     #    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1 # this one is in memory
-    url: jdbc:h2:./h2/heroes;AUTO_SERVER=TRUE # this one is on the disk, notice the h2 folder and contents it creates
+    url: jdbc:h2:./h2/bits4cash;AUTO_SERVER=TRUE # this one is on the disk, notice the h2 folder and contents it creates
     driverClassName: org.h2.Driver
     username: sa
     password: sa
