tryna build stuff

--- a/.dev.env
+++ b/.dev.env
@@ -1,5 +1,5 @@
 export SPRING_ACTIVE_PROFILE='development'
-export DOCKER_REPO='glebkomissarov/backend4cash:dev'
+export IMAGE_NAME='backend4cash:dev'
 export APP_NAME='backend4cash_dev'
 export PORT='8082'
 export SERVER_IP='193.40.156.55'
