--- a/.master.env
+++ b/.master.env
@@ -1,5 +1,5 @@
 export SPRING_ACTIVE_PROFILE='production'
-export DOCKER_REPO='glebkomissarov/backend4cash:prod'
+export IMAGE_NAME='backend4cash:prod'
 export APP_NAME='backend4cash_prod'
 export PORT='8080'
 export SERVER_IP='193.40.156.55'
