--- a/.qa.env
+++ b/.qa.env
@@ -1,5 +1,5 @@
 export SPRING_ACTIVE_PROFILE='development'
-export DOCKER_REPO='glebkomissarov/backend4cash:qa'
+export IMAGE_NAME='backend4cash:qa'
 export APP_NAME='backend4cash_qa'
 export PORT='8081'
 export SERVER_IP='193.40.156.55'
