--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ services:
         - docker:stable-dind
 stages:
         - pull the code
+        - build jar
         - build docker image
 
 pull:
@@ -10,7 +11,17 @@ pull:
                 - cd /home/ubuntu/bits4cash/backend4cash
         script:
                 - git pull git@gitlab.cs.ttu.ee:glkomi/backend4cash.git
-build:
+
+
+build jar:
+        stage: build jar
+        before_script:
+                - source .${CI_COMMIT_REF_NAME}.env
+                - cd /home/ubuntu/bits4cash/backend4cash
+        script:
+                - mvn install -Dspring.profiles.active=$SPRING_ACTIVE_PROFILE
+
+build docker:
         stage: build docker image
         before_script:
                 - source .${CI_COMMIT_REF_NAME}.env
