--- a/.qa.env
+++ b/.qa.env
@@ -4,3 +4,4 @@ export APP_NAME='backend4cash_qa'
 export PORT='8081'
 export SERVER_IP='193.40.156.55'
 export SERVER_SSH_KEY="$DEV_SSH_PRIVATE_KEY"
+export NETWORK_NAME="network4cash"
