--- a/.dev.env
+++ b/.dev.env
@@ -1,7 +1,7 @@
-export SPRING_ACTIVE_PROFILE='development'
-export IMAGE_NAME='backend4cash:dev'
-export APP_NAME='backend4cash_dev'
-export PORT='8082'
+export SPRING_ACTIVE_PROFILE='production'
+export IMAGE_NAME='backend4cash:prod'
+export APP_NAME='backend4cash_prod'
+export PORT='8080'
 export SERVER_IP='193.40.156.55'
 export SERVER_SSH_KEY="$DEV_SSH_PRIVATE_KEY"
 export NETWORK_NAME="network4cash"
