im retard (no offence)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,8 @@ pull:
         before_script:
                 - cd /home/ubuntu/bits4cash/backend4cash
         script:
-                - git pull git@gitlab.cs.ttu.ee:glkomi/backend4cash.git remote ${CI_COMMIT_REF_NAME}
+                - git reset --hard origin/${CI_COMMIT_REF_NAME}
+                #- git pull git@gitlab.cs.ttu.ee:glkomi/backend4cash.git remote ${CI_COMMIT_REF_NAME}
 
 
 build jar:
