--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ stages:
         - pull the code
         - build jar
         - build docker image
+        - stop current container
         - run docker container
 
 pull:
@@ -31,12 +32,21 @@ build docker:
         script:
                 - docker build --build-arg SPRING_ACTIVE_PROFILE=$SPRING_ACTIVE_PROFILE -t $IMAGE_NAME .
 
+stop current:
+        stage: stop current container
+        # allow failure cause sometimes there might not be any container with given name running
+        allow_failure: true
+        before_script:
+                - source .${CI_COMMIT_REF_NAME}.env
+                - cd /home/ubuntu/bits4cash/backend4cash
+        script:
+                - docker stop $APP_NAME
+                - docker container rm $APP_NAME
+
 run:
         stage: run docker container
         before_script:
                 - source .${CI_COMMIT_REF_NAME}.env
                 - cd /home/ubuntu/bits4cash/backend4cash
-                - docker stop $APP_NAME
-                - docker container rm $APP_NAME
         script:
                 - docker container run -d --name $APP_NAME --net=$NETWORK_NAME --net-alias=$APP_NAME -p $PORT:8080 -e SPRING_PROFILES_ACTIVE=$SPRING_ACTIVE_PROFILE $IMAGE_NAME
