--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,6 +13,7 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
+    #TODO DONT FORGET TO MAKE ALL THE STUFF ENV VARS THAT ARE LOADED IN THE SPECIAL SCRIPT :)
     url: jdbc:mysql://${172.21.0.4:localhost}:3306/bits4data
     driverClassName: com.mysql.cj.jdbc.Driver
     username: root
