--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,9 @@ build jar:
                 - source .${CI_COMMIT_REF_NAME}.env
                 - cd /home/ubuntu/bits4cash/backend4cash
         script:
-                # Skipping tests here right now since building the jar in the
-                - mvn install -Dmaven.test.skip=true -Dspring.profiles.active=$SPRING_ACTIVE_PROFILE
+                # 1st run with tests, 2nd without. Choose one of the following here
+                - mvn install -Dspring.profiles.active=$SPRING_ACTIVE_PROFILE
+                #- mvn install -Dmaven.test.skip=true -Dspring.profiles.active=$SPRING_ACTIVE_PROFILE
 
 build docker:
         stage: build docker image
