--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ pull:
         before_script:
                 - cd /home/ubuntu/bits4cash/backend4cash
         script:
-                - git reset --hard origin/${CI_COMMIT_REF_NAME}
+                - git reset --hard HEAD
                 - git pull git@gitlab.cs.ttu.ee:glkomi/backend4cash.git ${CI_COMMIT_REF_NAME}
 
 
@@ -23,8 +23,8 @@ build jar:
                 - cd /home/ubuntu/bits4cash/backend4cash
         script:
                 # 1st run with tests, 2nd without. Choose one of the following here.
-                #- mvn install -Dspring.profiles.active=$SPRING_ACTIVE_PROFILE
-                - mvn install -Dmaven.test.skip=true -Dspring.profiles.active=$SPRING_ACTIVE_PROFILE
+                - mvn clean install -Dspring.profiles.active=$SPRING_ACTIVE_PROFILE
+                #- mvn clean install -Dmaven.test.skip=true -Dspring.profiles.active=$SPRING_ACTIVE_PROFILE
 
 build docker:
         stage: build docker image
