--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create
+spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://mysql:3306/bits4data
 spring.datasource.username=root
 spring.datasource.password=vovan
