--- a/.dev.env
+++ b/.dev.env
@@ -1,6 +1,6 @@
 export SPRING_ACTIVE_PROFILE='development'
 export IMAGE_NAME='backend4cash:dev'
-export APP_NAME='backend4cash_dev'
+export APP_NAME='backend4cashdev'
 export PORT='8069'
 export SERVER_IP='193.40.156.55'
 export SERVER_SSH_KEY="$DEV_SSH_PRIVATE_KEY"
