--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://mysql:3306/bits4data
 spring.datasource.username=root
