--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>ee.vovtech.</groupId>
 	<artifactId>backend4cash</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.1.5</version>
 	<name>backend4cash</name>
 	<description>some project</description>
 
@@ -41,11 +41,6 @@
 			<groupId>com.mashape.unirest</groupId>
 			<artifactId>unirest-java</artifactId>
 			<version>1.4.9</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
