--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://mysql:3306/bits4data
 spring.datasource.username=root
 spring.datasource.password=vovan
+#if the thing cannot connect to the db, instead of breaking completely it will try again
+spring.datasource.hikari.initialization-fail-timeout=-1
