--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mysql://mysql:3306/bits4data
 spring.datasource.username=root
 spring.datasource.password=vovan
 #if the thing cannot connect to the db, instead of breaking completely it will try again
-spring.datasource.hikari.initialization-fail-timeout=-1
+#spring.datasource.hikari.initialization-fail-timeout=
