--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,10 @@ spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.url=jdbc:mysql://mysql:3306/bits4data
 spring.datasource.username=root
 spring.datasource.password=vovan
+server.servlet.context-path=/api
+logging.file.path=./logs
+#server:
+#  servlet:
+#    context-path: /api
 #if the thing cannot connect to the db, instead of breaking completely it will try again
 #spring.datasource.hikari.initialization-fail-timeout=
