--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQLDialect
-spring.datasource.url=jdbc:mysql://mysql:3306/bits4data
+spring.datasource.url=jdbc:mysql://mysql:3306/bits4data?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=vovan
 server.servlet.context-path=/api
