--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=vovan
 server.servlet.context-path=/api
 logging.file.path=./logs
+debug=true
 #server:
 #  servlet:
 #    context-path: /api
