--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:mysql://mysql:3306/bits4data?createDatabaseIfNotExist
 spring.datasource.username=root
 spring.datasource.password=vovan
 server.servlet.context-path=/api
+spring.datasource.hikari.initialization-fail-timeout=0
 logging.file.path=./logs
 debug=true
 #server:
