--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,8 +40,9 @@ stop current:
                 - source .${CI_COMMIT_REF_NAME}.env
                 - cd /home/ubuntu/bits4cash/backend4cash
         script:
-                - docker stop $APP_NAME
-                - docker container rm $APP_NAME
+                # cool shell magic
+                - docker stop $(docker ps -f "name=back" -q)
+                - docker container rm $(docker ps -f "name=back" -q)
 
 run:
         stage: run docker container
