--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,6 @@ services:
     hostname: mysql
     expose:
       - 3306
-    networks:
-      - network4cash
     environment:
       - MYSQL_ROOT_PASSWORD=vovan
     volumes:
@@ -20,8 +18,6 @@ services:
       - database
     image: backend4cash/dev
     container_name: backend4cash
-    networks:
-      - network4cash
     hostname: backend4cashdev
     ports:
       - "8069:8080"
@@ -32,7 +28,7 @@ services:
     volumes:
       - ~/logs4cash:/app/logs
 
-  frontend:
+  nginx:
     depends_on:
       - backend
     image: frontend4cash/dev
@@ -52,7 +48,7 @@ services:
 
   certbot:
     depends_on:
-      - frontend
+      - ngimx
     image: certbot/certbot
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
