--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
 
   certbot:
     depends_on:
-      - ngimx
+      - nginx
     image: certbot/certbot
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
