commenting tests out

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,9 +21,7 @@ build jar:
                 - source .${CI_COMMIT_REF_NAME}.env
                 - cd /home/ubuntu/bits4cash/backend4cash
         script:
-                # 1st run with tests, 2nd without. Choose one of the following here..
-                #- mvn clean install -Dspring.profiles.active=$SPRING_ACTIVE_PROFILE
-                - mvn clean install -Dmaven.test.yaml.skip=false -Dspring.profiles.active=$SPRING_ACTIVE_PROFILE
+                - mvn clean install -Dmaven.test.yaml.skip=true -Dspring.profiles.active=$SPRING_ACTIVE_PROFILE
 
 build docker:
         stage: build docker image
