trying to put htts on top of spring or sth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,14 @@ spring.datasource.username=root
 spring.datasource.password=vovan
 server.servlet.context-path=/api
 logging.file.path=./logs
-#server:
-#  servlet:
-#    context-path: /api
+# vovtech https params
+server.ssl.key-store=classpath:vovtech.jks
+server.ssl.key-store-type=pkcs12
+server.ssl.key-store-password=vovtech
+server.ssl.key-password=vovtech
+server.ssl.key-alias=vovtech
+server.port=8443
+
+
 #if the thing cannot connect to the db, instead of breaking completely it will try again
 #spring.datasource.hikari.initialization-fail-timeout=
