--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@ spring.datasource.password=vovan
 server.servlet.context-path=/api
 logging.file.path=./logs
 # vovtech https params
-server.ssl.key-store=classpath:vovtech.jks
-server.ssl.key-store-type=pkcs12
-server.ssl.key-store-password=vovtech
-server.ssl.key-password=vovtech
-server.ssl.key-alias=vovtech
 server.port=8443
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=vovtech
+#server.ssl.key-password=vovtech
+server.ssl.key-alias=vovtech
 
 
 #if the thing cannot connect to the db, instead of breaking completely it will try again
