--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,14 +5,8 @@ spring.datasource.username=root
 spring.datasource.password=vovan
 server.servlet.context-path=/api
 logging.file.path=./logs
-# vovtech https params
-server.port=8443
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-password=vovtech
-#server.ssl.key-password=vovtech
-server.ssl.key-alias=vovtech
-
-
+#server:
+#  servlet:
+#    context-path: /api
 #if the thing cannot connect to the db, instead of breaking completely it will try again
 #spring.datasource.hikari.initialization-fail-timeout=
