changed pom.xml and app.yaml for adding auth stuff in future. A lot of smol commits incoming and if anything breaks it will be ez2fix

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,4 +13,10 @@ spring:
     url: jdbc:mysql://mysql:3306/bits4data?createDatabaseIfNotExist=true
     username: root
     password: vovan
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri:
+          jwk-ser-uri:
 
