--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-boot-starter</artifactId>
 			<version>3.0.0</version>
@@ -73,6 +77,18 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+	<dependency>
+    	<groupId>org.jboss.resteasy</groupId>
+    	<artifactId>resteasy-jackson2-provider</artifactId>
+    	<version>3.12.1.Final</version>
+	</dependency>
+
+	<dependency>
+    	<groupId>org.keycloak</groupId>
+    	<artifactId>keycloak-dependencies-server-all</artifactId>
+    	<version>11.0.2</version>
+    	<type>pom</type>
+	</dependency> 
 	</dependencies>
 
 	<build>
