--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,10 +13,11 @@ spring:
     url: jdbc:mysql://mysql:3306/bits4data?createDatabaseIfNotExist=true
     username: root
     password: vovan
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri:
-          jwk-ser-uri:
+  # This for later when i get the actual Ks
+  # security:
+  #   oauth2:
+  #     resourceserver:
+  #       jwt:
+  #         issuer-uri:
+  #         jwk-ser-uri:
 
