--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<spring.profiles.active>local,no-liquibase</spring.profiles.active>
 	</properties>
 
 	<dependencies>
