Trying an approach that does make some sense since the problem is probably with database (according to the orange website)

--- a/.dev.env
+++ b/.dev.env
@@ -1,4 +1,4 @@
-export SPRING_ACTIVE_PROFILE='development, no-liquibase'
+export SPRING_ACTIVE_PROFILE='development'
 export IMAGE_NAME='backend4cash:dev'
 export APP_NAME='backend4cashdev'
 export PORT='8069'
