--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,6 +13,16 @@ spring:
     url: jdbc:mysql://mysql:3306/bits4data?createDatabaseIfNotExist=true
     username: root
     password: vovan
+#  datasource:
+#    username: sa
+#    url: jdbc:h2:mem:testdb
+keycloak:
+  server:
+    contextPath: /auth
+    adminUser:
+      username: root
+      password: vovan
+    realmImportFile: vovan-realm.json
   # This for later when i get the actual Ks
   # security:
   #   oauth2:
