Added secured roles, postDto and couple TODOs

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,20 +27,20 @@
 #logging:
 #  file:
 #    path: ./logs
+#
 
 
-
-# do not comment these
+# vvv do not comment these  vvv
 jwt:
   secret: secret
   durationMinutes: 120
 coins:
   updating: true
   cron: 0 * * * * *
-# do not comment these
+# ^^^ do not comment these  ^^^
 
 
-# upper is for local testing, bottom is for server
+ upper is for local testing, bottom is for server
 server:
   port: 8080
   servlet:
